--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ tenace (0.13-1) unstable; urgency=low
 
   * New upstream version.
     + Links with -lm. Closes: #704794.
+    + Set dealer and vulnerability correctly on new boards. Closes: #668003.
   * Drop Suggests: gnome-games-extra-data, doesn't exist anymore. Thanks to
     Jeremy Bicha for spotting.
 
